--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@
     <!--<nav class="navbar navbar-expand-md bg-dark navbar-dark">-->
     <nav class="navbar navbar-expand-sm navbar-light" style="background-color:bisque;">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="inicio.html">Navbar</a>
       
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="dos.html">Otra página</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
